--- a/angular.json
+++ b/angular.json
@@ -10,7 +10,7 @@
       "prefix": "app",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "sass"
+          "style": "scss"
         }
       },
       "architect": {
@@ -23,7 +23,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
+              "src/shareitfavicon.png",
               "src/assets"
             ],
             "styles": [
@@ -90,7 +90,7 @@
             ],
             "scripts": [],
             "assets": [
-              "src/favicon.ico",
+              "src/shareitfavicon.png",
               "src/assets"
             ]
           }
