--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -25,6 +25,7 @@ steps:
   - 'PROJECT_ID=${PROJECT_ID}'
   - 'SHORT_SHA=${SHORT_SHA}'
   - '_CONTAINER_PORT=${_CONTAINER_PORT}'
+  - '_USER_EMAIL=${_USER_EMAIL}'
 
 - name: 'gcr.io/cloud-builders/kubectl'
   args: ['apply','-f','k8s/']
