--- a/k8s/ingress.yml
+++ b/k8s/ingress.yml
@@ -4,7 +4,7 @@ metadata:
   name: ${_PROJECT_NAME}
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
     # certmanager.k8s.io/cluster-issuer: letsencrypt-prod
     # certmanager.k8s.io/acme-http01-edit-in-place: "true"
     # kubernetes.io/ingress.class: "nginx"
